--- a/style.css
+++ b/style.css
@@ -15,3 +15,4 @@ tekt-align: center;
 .kartu-profil img {
   width: 150px
   border-radius: 50%; /* trik untuk membuat persegi panjang menjadi lingkaran */
+}
